--- a/estilo.css
+++ b/estilo.css
@@ -1,15 +1,41 @@
 body {
-    background-color: #ffffff;
+
 }
 
 h1 {
     text-align: center;
 }
  
+.principal {
+    background: aliceblue;
+    padding: 30px;
+}
+
 p {
     text-align: center;
 }
 
 em strong {
     color: rgba(30, 255, 0, 0.993);
+}
+
+.beneficios{
+    background: #ffffff;
+    padding: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+.imagembeneficios {
+    width: 50%;
+}
+    
+
+u1 {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%
+
 }
