--- a/estilos.css
+++ b/estilos.css
@@ -1,17 +1,17 @@
 body {
-
+   
 }
 
 img {
     width: 100%;
 }
 
-h1 {
+h2 {
     text-align: center;
 }
- 
+
 .principal {
-    background: aliceblue;
+    background: #CCCCCC;
     padding: 30px;
 }
 
@@ -20,26 +20,25 @@ p {
 }
 
 em strong {
-    color: rgba(30, 255, 0, 0.993);
+    color: red;
 }
 
-.beneficios{
-    background: #ffffff;
+.beneficios {
+    background: #FFFFFF;
     padding: 20px;
 }
 
-h2 {
+h3 {
     text-align: center;
 }
+
 .imagembeneficios {
     width: 50%;
 }
 
-
-u1 {
+ul {
     display: inline-block;
     vertical-align: top;
     width: 20%;
     margin-right: 15%;
-
 }
