--- a/produtos.css
+++ b/produtos.css
@@ -49,6 +49,19 @@ nav a {
     font-weight: bold;
 }
 
+.produtos li:hover {
+    border-color: #c78c19;
+}
+
+.produtos li:active {
+border-color: #088c19;
+}
+
+.produtos li:hover h2 {
+    font-size: 34xp;
+    font-weight: bold;
+}
+
 .produto-descricao {
     font-size: 18px;
 }
@@ -57,4 +70,16 @@ nav a {
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+;footer {
+    text-align: center;
+    background: url("img/bg.jpg");
+    padding: 40xp 0;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size:  13px;
+    margin: 20xp 0 0;
 }
