--- a/produtos.css
+++ b/produtos.css
@@ -72,7 +72,7 @@ border-color: #088c19;
     margin-top: 10px;
 }
 
-;footer {
+footer {
     text-align: center;
     background: url("img/bg.jpg");
     padding: 40xp 0;
