--- a/estilo.css
+++ b/estilo.css
@@ -217,9 +217,77 @@ form label, form legend {
     width: 50%;
 }
 
-ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video, .produtos {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+        text-align: center;
+    }
+
+    .lista-beneficios, .imagem-beneficios, .imagem-produtos, form {
+        width: 100%;
+    }
+
+    .produtos li {
+        display: block;
+        width: auto;
+        margin: 30px;
+    }
+
+    .main-contato {
+        width: auto;
+        margin-left: 3em;
+    }
+
+    .input-padrao {
+        width: 70%;
+    }
+
+    .enviar {
+        width: auto;
+    }
 }
