--- a/produtos.css
+++ b/produtos.css
@@ -1,6 +1,5 @@
 header {
-    background: #CCCCCC;
-    padding: 20px 0;
+    background: #BBBBBB;
 }
 
 .caixa {
@@ -13,7 +12,7 @@ nav {
     position: absolute;
     top: 110px;
     right: 0;
- }
+}
 
 nav li {
     display: inline;
@@ -23,9 +22,14 @@ nav li {
 nav a {
     text-transform: uppercase;
     color: #000000;
-    font-weight:  bold;
+    font-weight: bold;
     font-size: 22px;
     text-decoration: none;
+}
+
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
 .produtos {
@@ -42,25 +46,26 @@ nav a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border: 2px solid #000000;
+    border-color: #000000;
+    border-width: 2px;
+    border-style: solid;
     border-radius: 10px;
 }
 
-.produtos h2 {
-    font-size:  30px;
-    font-weight: bold;
-}
-
 .produtos li:hover {
-    border-color: #c78c19;
+    border-color: #C78C19;
 }
 
 .produtos li:active {
-border-color: #088c19;
+    border-color: #088C19
 }
 
 .produtos li:hover h2 {
-    font-size: 34xp;
+    font-size: 30px;
+}
+
+.produtos h2 {
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -68,7 +73,7 @@ border-color: #088c19;
     font-size: 18px;
 }
 
-.produtos-preco {
+.produto-preco {
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
@@ -76,12 +81,12 @@ border-color: #088c19;
 
 footer {
     text-align: center;
-    background: url("img/bg.jpg");
-    padding: 40xp 0;
+    background: url("bg.jpg");
+    padding: 40px 0;
 }
 
 .copyright {
     color: #FFFFFF;
-    font-size:  13px;
-    margin: 20xp 0 0;
+    font-size: 13px;
+    margin-top: 20px;
 }
