--- a/produtos.css
+++ b/produtos.css
@@ -1,41 +1,17 @@
-header {
-    background: #BBBBBB;
-}
-
-.caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
-}
-
-nav {
-    position: absolute;
-    top: 110px;
-    right: 0;
-}
-
-nav li {
-    display: inline;
-    margin: 0 0 0 15px;
-}
-
-nav a {
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-}
-
-nav a:hover {
-    color: #C78C19;
-    text-decoration: underline;
+header, a {
+    color: transparent;
+    left: -1000000px;
 }
 
 .produtos {
     width: 940px;
     margin: 0 auto;
     padding: 50px 0;
+}
+
+.produtos h1 {
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .produtos li {
@@ -46,47 +22,29 @@ nav a:hover {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border-color: #000000;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #000000;
     border-radius: 10px;
 }
 
 .produtos li:hover {
-    border-color: #C78C19;
+    border-color:#C78C19;
+    border-width: 4px;
 }
 
 .produtos li:active {
-    border-color: #088C19
+    border-color: #CCCCCC;
 }
 
-.produtos li:hover h2 {
-    font-size: 30px;
-}
-
-.produtos h2 {
-    font-size: 30px;
-    font-weight: bold;
+.produtos li:hover h1 {
+    font-size: 25px;
 }
 
 .produto-descricao {
-    font-size: 18px;
+    font-size: 17px;
 }
 
-.produto-preco {
+.produtos-preco {
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
-}
-
-footer {
-    text-align: center;
-    background: url("bg.jpg");
-    padding: 40px 0;
-}
-
-.copyright {
-    color: #FFFFFF;
-    font-size: 13px;
-    margin-top: 20px;
 }
