--- a/produtos.css
+++ b/produtos.css
@@ -1,23 +1,17 @@
-header {
-    background: #CCCCCC;
-}
-
-nav li {
-    display: inline;
-}
-
-nav a {
-    text-transform: uppercase;
-    color: #000000;
-    font-weight:  bold;
-    font-size: 22px;
-    text-decoration: none;
+header, a {
+    color: transparent;
+    left: -1000000px;
 }
 
 .produtos {
     width: 940px;
     margin: 0 auto;
     padding: 50px 0;
+}
+
+.produtos h1 {
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .produtos li {
@@ -28,19 +22,29 @@ nav a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
 
-.produtos h2 {
-    font-size:  30px;
-    font-weight: bold;
+.produtos li:hover {
+    border-color:#C78C19;
+    border-width: 4px;
+}
+
+.produtos li:active {
+    border-color: #CCCCCC;
+}
+
+.produtos li:hover h1 {
+    font-size: 25px;
 }
 
 .produto-descricao {
-    font-size: 18px;
+    font-size: 25px;
 }
 
 .produtos-preco {
-    font-size: 22px;
+    font-size: 25px;
     font-weight: bold;
     margin-top: 10px;
 }
