--- a/produtos.css
+++ b/produtos.css
@@ -1,17 +1,42 @@
-header, a {
-    color: transparent;
-    left: -1000000px;
+header {
+    background: #CCCCCC;
+    padding: 20px 0;
+}
+
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight:  bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #c78c19;
+    text-decoration: underline;
 }
 
 .produtos {
     width: 940px;
     margin: 0 auto;
     padding: 50px 0;
-}
-
-.produtos h1 {
-    font-size: 30px;
-    font-weight: bold;
 }
 
 .produtos li {
@@ -22,29 +47,39 @@ header, a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border: 2px solid #000000;
-    border-radius: 10px;
 }
 
 .produtos li:hover {
-    border-color:#C78C19;
-    border-width: 4px;
+    border-color: #c78c19;
 }
 
 .produtos li:active {
-    border-color: #CCCCCC;
+    border-color: #088C19;
 }
 
-.produtos li:hover h1 {
-    font-size: 25px;
+.produtos li:hover h2 {
+    font-size:  34px;
+    font-weight: bold;
 }
 
 .produto-descricao {
-    font-size: 25px;
+    font-size: 18px;
 }
 
 .produtos-preco {
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url("img/bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;
 }
